--- a/LocalDisasterPreventionInformationApp/Pages/Setting/MyPage.xaml
+++ b/LocalDisasterPreventionInformationApp/Pages/Setting/MyPage.xaml
@@ -8,7 +8,7 @@
     <base:BasePage>
         <base:BasePage.InnerContent>
 
-            <Grid>
+            <Grid x:Name="Inner">
 
                 <ScrollView>
                     <VerticalStackLayout Padding="20" Spacing="40">
