--- a/LocalDisasterPreventionInformationApp/Pages/HazardMap/HazardMapPage.xaml
+++ b/LocalDisasterPreventionInformationApp/Pages/HazardMap/HazardMapPage.xaml
@@ -12,7 +12,7 @@
 
                     <!-- 上部バー -->
                     <Grid
-                    ColumnDefinitions="*, Auto"
+                    ColumnDefinitions="*, Auto, Auto"
                     Padding="5"
                     BackgroundColor="#F5F5F5"
                     Margin="0,0,0,10">
@@ -24,15 +24,27 @@
                         VerticalOptions="Center"
                         TextColor="Black" />
 
-                        <!-- ピッカー -->
+                        <!-- 災害種別ピッカー -->
                         <Picker
+                        x:Name="HazardPicker"
                         Grid.Column="1"
                         Title="災害種別"
                         ItemsSource="{Binding HazardList}"
                         ItemDisplayBinding="{Binding Name}"
                         SelectedItem="{Binding SelectedHazard}"
                         WidthRequest="160"
-                        HorizontalOptions="End" />
+                        HorizontalOptions="End" 
+                        SelectedIndexChanged="OnSelectionChanged"/>
+
+                        <!-- 住所ピッカー -->
+                        <Picker
+                        x:Name="AddressPicker"
+                        Grid.Column="2"
+                        Title="住所種別"
+                        ItemDisplayBinding="{Binding AddressType}"
+                        WidthRequest="160"
+                        HorizontalOptions="End" 
+                        SelectedIndexChanged="OnSelectionChanged"/>
                     </Grid>
 
                     <!-- 地図 -->
@@ -47,18 +59,22 @@
                     VerticalOptions="Fill">
 
                         <!-- 後で地図を入れる -->
-                        <Grid BackgroundColor="#DDDDDD">
+                        <!--Grid BackgroundColor="#DDDDDD">
                             <Label
                             Text="ここに地図が表示されます"
                             HorizontalOptions="Center"
                             VerticalOptions="Center"
                             TextColor="Black" />
-                        </Grid>
+                        </Grid-->
 
+                        <WebView
+                            x:Name="HazardWebView"
+                            Source="hazardmap.html"
+                            Navigated="HazardWebView_Navigated" />
+                        
                     </Border>
 
                 </Grid>
-
 
             </Grid>
         </base:BasePage.InnerContent>
